# bazel_mono_repo

./: .gitignore  WORKSPACE  go.mod  go.sum  pyproject.toml  requirements.txt
post-service/: BUILD.bazel  main.go
post_service/: BUILD.bazel
shared/: BUILD  jwt.go  jwt_test.go  logger.go  logger_test.go
user-service/: BUILD.bazel  main.py
user_service/: BUILD.bazel  app.py  main.py  test_app.py
