[tool.poetry]
name = "bazel-mono-repo"
version = "0.1.0"
description = ""
authors = ["Hariharasudhan <hari@nineleaps.com>"]
readme = "README.md"
packages = [{include = "bazel_mono_repo"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.100.0"
uvicorn = {extras = ["standard"], version = "^0.23.1"}
psycopg2-binary = "^2.9.6"
pytest = "^7.4.0"
httpx = "^0.24.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
